...
      child: Column(
        children: [
          _buildButton(
            context,
            colorScheme,
            "Añadir ingreso",
            Key("addIncomeButton"),
            '/incomes/create',
          ),
          const SizedBox(height: 20),
          _buildButton(
            context,
            colorScheme,
            "Añadir gasto",
            Key("addExpenseButton"),
            '/expenses/create',
          ),
          const SizedBox(height: 20),
          _buildButton(context,
            colorScheme,
            "Ver historial",
...
